--- a/package.json
+++ b/package.json
@@ -15,5 +15,10 @@
     "http-errors": "~1.6.3",
     "morgan": "~1.9.1",
     "uuid": "^8.3.2"
+  },
+  "devDependencies": {
+    "eslint": "^7.31.0",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-plugin-import": "^2.23.4"
   }
 }
